--- a/src/UiB.UI/src/index.css
+++ b/src/UiB.UI/src/index.css
@@ -1,18 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  height: 100vh;
-  background: #cce6ff;
-  margin: 0;
-  font-family: "Roboto";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Roboto';
+  font-size: 1.3rem;
 }
